--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
         crossorigin="anonymous" />
      <!-- Setting the document title -->
+    <link rel="icon" href="Title-icon.png" type="image/x-icon">
     <title>Currency Converter @umarmaaz</title>
 
 </head>
